--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "enzyme": "^3.1.1",
     "enzyme-adapter-react-16": "^1.0.4",
+    "fetch-mock": "^5.13.1",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
@@ -14,6 +15,7 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-mock-store": "^1.3.0",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
